# esp-corecomponents

./: CMakeLists.txt  README.md  idf_component.yml
doc/: list_append_2_plot.py  list_append_plot.py  list_insert_randomized_2_plot.py  list_insert_randomized_plot.py  set_destruction_plot.py  set_insert_memory_overhead_plot.py  set_insert_memory_plot.py  set_insert_plot.py  set_lookup_randomized_plot.py  zero_size_overheads_2_plot.py  zero_size_overheads_plot.py
doc/data/: cc_list_insert_randomized_runtime.py  cc_set_destruction_dense_runtime.py  cc_set_destruction_sparse_runtime.py  cc_set_insert_ascending_memory.py  cc_set_insert_ascending_runtime.py  cc_set_insert_randomized_memory.py  cc_set_insert_randomized_runtime.py  cc_set_lookup_dense_randomized_runtime.py  cc_set_lookup_sparse_randomized_runtime.py  std_deque_insert_randomized_runtime.py  std_set_destruction_runtime.py  std_set_insert_randomized_memory.py  std_set_insert_randomized_runtime.py  std_set_lookup_randomized_runtime.py  std_unordered_set_insert_randomized_memory.py  std_vector_insert_randomized_runtime.py
include/cc/: Array  ArrayIterator  Casefree  Composite  Cow  Dim  Exception  Format  Function  Handle  HeapSort  InOut  IoStream  Iterator  KeyValue  List  Locator  Map  MultiMap  MultiSet  None  NullStream  Object  Queue  Random  Set  Shared  Stream  String  SystemError  Use  Utf8Sink  bits  chars  container  exceptions  find  flags  math  order  (+2 more)
src/: Exception.cc  Format.cc  IoStream.cc  NullStream.cc  Stream.cc  String.cc  SystemError.cc  Utf8Sink.cc  exceptions.cc  str.cc
(+21 files in other folders)
